# s21_3d_viewer_v1

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  Makefile  Makefile.txt
src/app/: CMakeLists.txt  main.cpp  parser.c
src/cmake/: AddGitSubmodule.cmake  FindCheck.cmake
src/docs/: CMakeLists.txt  main_page.md
src/include/backend/: loader.h  object_t.h  parser.h  polygon_t.h  transformations.h  vector_t.h  vertex_t.h
src/include/frontend/: mesh_gl_widget.hpp  model_viewer.h  model_viewer.hpp  object_gl_widget.hpp  temp_cube_object.hpp
src/model/: 3DViewer.c  3DViewer.h
src/src/backend/: CMakeLists.txt  loader.c  object_t.c  parser.c  transformations.c
src/src/frontend/: CMakeLists.txt  mesh_gl_widget.cpp  model_viewer.cpp  model_viewer.ui  object_gl_widget.cpp  resources.qrc
src/src/frontend/shaders/: fragment.glsl  vertex.glsl
src/src/frontend/ui/: model_viewer.ui
src/tests/: CMakeLists.txt
src/tests/backend/: CMakeLists.txt  master_suite.c  test_suites.h  tests_loader.c  tests_main.c  tests_parser.c  tests_transformations.c
