qt_add_executable("3D_Viewer" main.cpp)

target_link_libraries("3D_Viewer" PRIVATE "3D_Viewer_frontend" Qt6::Widgets)

set_target_properties("3D_Viewer" PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER s21.model_3d_viewer.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

install(TARGETS "3D_Viewer"
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
